--- a/discorddark.css
+++ b/discorddark.css
@@ -1117,6 +1117,7 @@ button.bd-addon-button:not(.bd-link, .bd-button-danger):hover {
   font-size: 0.625rem;
   font-weight: 400;
   line-height: 1;
+  text-transform: lowercase;
 }
 
 .edited_f9f2ca:not(.message-translate-indicator) {
